[metadata]
name = pwm_fan_control
version = 1.0.0
author = yamvsne
author_email = yamvsne@gmail.com
description = pwm fan control
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    pigpio
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pwm_fan_control = pwm_fan_control:main
